--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -69,7 +69,7 @@
 
 
 
- <form action="https://test.payu.in/_payment/" method="POST">
+ <form action="https://srb1403.pythonanywhere.com/thankyou/" method="POST">
 
      <div class="form-group">
   	  <label>Full Name</label><br>
@@ -106,15 +106,15 @@
   	  <label>Contact</label><br>
   	  <input type="text" class="form-control" name="phone" value="{{phone}}">
      </div>
-      <input type="hidden" class="form-control" name="txnid" value="{{txnid}}">
-      <input type="hidden" class="form-control" name="amount" value="{{amount}}">
-      <input type="hidden" class="form-control" name="productinfo" value="{{productinfo}}">
-      <input type="hidden" class="form-control" name="surl" value="{{surl}}">
-      <input type="hidden" class="form-control" name="furl" value="{{furl}}">
-      <input type="hidden" class="form-control" name="firstname" value="{{user}}">
-      <input type="hidden" class="form-control" name="key" value="{{key}}">
-      <input type="hidden" class="form-control" name="salt" value="{{salt}}">
-      <input type="hidden" class="form-control" name="hash" value="{{hash_o}}">
+      <!--<input type="hidden" class="form-control" name="txnid" value="{{txnid}}">-->
+      <!--<input type="hidden" class="form-control" name="amount" value="{{amount}}">-->
+      <!--<input type="hidden" class="form-control" name="productinfo" value="{{productinfo}}">-->
+      <!--<input type="hidden" class="form-control" name="surl" value="{{surl}}">-->
+      <!--<input type="hidden" class="form-control" name="furl" value="{{furl}}">-->
+      <!--<input type="hidden" class="form-control" name="firstname" value="{{user}}">-->
+      <!--<input type="hidden" class="form-control" name="key" value="{{key}}">-->
+      <!--<input type="hidden" class="form-control" name="salt" value="{{salt}}">-->
+      <!--<input type="hidden" class="form-control" name="hash" value="{{hash_o}}">-->
 
       <button type="submit" class="btn btn-default">Submit</button>
      </div>
